--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@
 * Deprecation warning:
     - tiler_host, tiler_prototol, tiler_port, sql_api_domain, sql_api_protocol are deprecated, use sql_api_template and maps_api_template instead. https://github.com/CartoDB/cartodb.js/blob/develop/doc/API.md#how-to-set-a-different-host-than-cartodbcom
 
+3.13.3 (09//04//2015)
+* Fixes default styles for header titles in infowindows.
 
 3.13.2 (07//04//2015)
 * Fix double escaping on infowindows
