--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,10 @@
-3.14.0 ()
+3.14.0 (23//04//2015)
 * Infowindow in anonymous maps are requested by attributes endpoint in maps api so SQL API is not used anymore
 * Changed the way remote host is set for maps and sql API.
 * Fixed error management when map instanciation fails
 * Instead of showing a single date, Torque's timeslider shows the date range that a single step comprises. 
 * Fixed enabling or disabling the torque loop property not working from cartodb.js
+* Allows to specify a step when generating a static map of a Torque layer
 * Deprecation warning:
     - tiler_host, tiler_prototol, tiler_port, sql_api_domain, sql_api_protocol are deprecated, use sql_api_template and maps_api_template instead. https://github.com/CartoDB/cartodb.js/blob/develop/doc/API.md#how-to-set-a-different-host-than-cartodbcom
 
