--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+3.14.2 ()
+* Allow to specify a template for the items of a custom legend.
+* The NOKIA geocoder doesn't encode the whitespaces anymore.
+
 3.14.1 (30//04//2015)
 * Fixes a bug that prevented setting the maxZoom and minZoom of a map.
 * Updates Torque to 2.11.2
