--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 3.14.2 (06//05//2015)
 * Allow to specify a template for the items of a custom legend.
 * The NOKIA geocoder doesn't encode the whitespaces anymore.
+* Adds documentation for the Static Map API
 
 3.14.1 (30//04//2015)
 * Fixes a bug that prevented setting the maxZoom and minZoom of a map.
