--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@
 * Hide <img> tag of infowindow covers when the url is invalid.
 * Expose legend model in sublayers/layers so that users can customize legends (#480).
 * Handle tooltip overflow (#482).
+* Only show tooltips when they have fields (#486).
 
 3.14.2 (06//05//2015)
 * Allow to specify a template for the items of a custom legend.
