--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@
 * Expose legend model in sublayers/layers so that users can customize legends (#480).
 * Handle tooltip overflow (#482).
 * Only show tooltips when they have fields (#486).
+* Updated Torque to 2.11.3
 
 3.14.2 (06//05//2015)
 * Allow to specify a template for the items of a custom legend.
