--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,4 @@
-3.X.X ()
-* New sublayer.isVisible() function
-
-3.15 (18//06//2015)
+3.15 (24//06//2015)
 * cartodb.js knows how to work with multiple types of sublayers (#508):
   * cartodb.createLayer accepts a `filter` option to specify wich types of layers must
     be rendered in the tiles. WARNING: all non-torque layers will be rendered by default.
@@ -9,6 +6,11 @@
     map and specify the layer indexes in the tile URLs. More about this
     [here](https://github.com/CartoDB/Windshaft-cartodb/blob/488c2462229474db21ba40b61a93edf83e6493b5/docs/Map-API.md#blending-and-layer-selection)
   * New subclasses of SubLayer for different types of sublayers.
+* Handle hidden layers properly when fetching attributes from tiler
+* Make the torque slider have the correct range every time it changes
+* Remove check for http-beginng vizjson addresses
+* Use local time in timeslider instead of UTC
+* New sublayer.isVisible() function
 
 3.14.6 (16//06//2015)
 * Use the right indexes when fetching grids and attributes (#518)
