--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+3.X ()
+* Take `visible` attribute into account when determining visibility of layers and serializing maps (#546)
+
 3.15 (24//06//2015)
 * cartodb.js knows how to work with multiple types of sublayers (#508):
   * cartodb.createLayer accepts a `filter` option to specify wich types of layers must
